# OOP_lab_7

./: CMakeLists.txt  game.cpp  game.h  main.cpp  npc.cpp  npc.h  tests.cpp
